--- a/GeoAgenda/GeoAgenda/GeoAgenda.csproj
+++ b/GeoAgenda/GeoAgenda/GeoAgenda.csproj
@@ -203,6 +203,10 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Logos\GeoCliente.png" />
+    <Content Include="Content\Logos\GeoLogo.jpg" />
+    <Content Include="Content\Logos\GeoRuta.jpg" />
+    <Content Include="Content\Logos\GeoVehiculo.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
